# rabauken

./: .gitignore  Cargo.toml  README.md  derivation.nix  dresden.zone.db  flake.nix
.direnv/: flake-profile-1-link
.github/workflows/: ci.yaml
chef/: Cargo.toml
chef/src/: args.rs  ctx.rs  main.rs  state.rs
chef/src/routes/: mod.rs  record.rs  zone.rs
chef/src/service/: generic_database.rs  generic_record_service.rs  merge.rs  mod.rs  model.rs  record.rs  zone.rs
entity/: Cargo.toml
entity/patch/: fixed_time_crate_serde_configuration.patch
entity/src/: error.rs  lib.rs  prelude.rs  record.rs  record_a.rs  record_aaaa.rs  record_cname.rs  record_mx.rs  try_from.rs  zone.rs
entity/src/models/: record_ns.rs  zone.rs
lib/: Cargo.toml
lib/entity/: Cargo.toml
lib/entity/patch/: fixed_time_crate_serde_configuration.patch
lib/entity/src/: error.rs  try_from.rs
lib/entity/src/models/: invite.rs  mod.rs  password.rs  prelude.rs  record.rs  record_a.rs  record_aaaa.rs  record_mx.rs  record_txt.rs  user.rs  zone.rs
lib/migration/: Cargo.toml
lib/migration/src/: lib.rs  m20231010_000001_create_table.rs  m20240316_000001_create_table.rs
lib/session/: Cargo.toml
lib/session/src/: lib.rs
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
maid/: Cargo.toml
maid/src/: args.rs  main.rs
maid/src/authority/: catalog.rs  mod.rs  zone.rs
maid/src/service/: zone.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231010_000001_create_table.rs
nixos-module/: chef.nix  maid.nix
pkgs/: chef.nix  maid.nix  migration.nix
ruth/: Cargo.toml
ruth/src/: args.rs  ctx.rs  main.rs  session.rs
ruth/src/routes/: auth.rs  mod.rs
ruth/src/service/: user.rs
ruth/src/utils/: mod.rs
