[workspace]
resolver = "2"
members = [
  "chef",
  "maid",
  "lib/entity",
  "lib/migration"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
