[workspace]
resolver = "2"
members = [
  "chef",
  "maid",
  "lib/entity",
  "lib/migration",
  "ruth",
  "lib/session",
  "lib/utils"
]

[workspace.dependencies]
sea-orm-migration = { version = "1.0.0-rc.2", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
hickory-server = { version = "0.24", default-features = false }
hickory-proto = { version = "0.24", default-features = false }
sea-orm = { version = "1.0.0-rc.2", default-features = false }
redis-derive = { version = "0.1", default-features = false }
async-trait = { version = "0.1", default-features = false }
tower-http = { version = "0.5", default-features = false }
axum-extra = { version = "0.9", default-features = false }
bb8-redis = { version = "0.15", default-features = false }
thiserror = { version = "1.0", default-features = false }
argon2 = { version = "0.5.3", default-features = false }
tracing = { version = "0.1", default-features = false }
tokio = { version = "1.36", default-features = false }
anyhow = { version = "1.0", default-features = false }
redis = { version = "0.25", default-features = false }
serde = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false }
axum = { version = "0.7", default-features = false }
time = { version = "0.3", default-features = false }
uuid = { version = "1.7", default-features = false }
url = { version = "2.5", default-features = false }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
