[package]
name = "chef"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-uuid"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
axum = { workspace = true, default-features = false, features = ["tokio", "http1", "json", "macros"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "ansi"] }
tracing = { workspace = true, default-features = false, features = ["release_max_level_info"] }
uuid = { workspace = true, default-features = false, features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "env"] }
time = { workspace = true, default-features = false }
url = { workspace = true, default-features = false }
migration = { path = "../lib/migration" }
entity = { path = "../lib/entity" }
anyhow = { workspace = true }
