[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9" }
serde = {version = "1", features = ["derive"], default-feautes = false}
time = {version = "0.3", features = ["serde"], default-feautes = false}
uuid = {version = "1.4", features = ["serde"], default-feautes = false}
