[package]
name = "maid"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true, default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"] }
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "ansi"] }
tracing = { workspace = true, default-features = false, features = ["release_max_level_info"] }
hickory-server = { version = "0.24", default-features = false }
clap = { workspace = true, features = ["derive", "env"] }
url = { workspace = true, default-features = false }
migration = { path = "../lib/migration" }
entity = { path = "../lib/entity", features = ["hickory-proto"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
