[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.12", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "with-time", "with-uuid", "cli"] }
tokio = { version = "1.32", default-features = false, features = ["macros", "rt-multi-thread"] }

