[package]
name = "ruth"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { workspace = true, default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-time"] }
clap = { workspace = true,default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env"] }
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread", "net", "signal", "fs"] }
argon2 = { workspace = true, default-features = false, features = ["password-hash", "std"] }
tracing = { workspace = true, default-features = false, features = ["release_max_level_debug"] }
tracing-subscriber = {workspace = true, default-features = false, features = ["fmt", "ansi"] }
axum = { workspace = true,default-features = false, features = ["tokio", "http1", "json"] }
time = {workspace = true, default-features = false, features = ["serde", "formatting"] }
axum-extra = { workspace = true, default-features = false, features = ["cookie"] }
uuid = { workspace = true,default-features = false, features = ["v4", "serde"] }
tower-http = { workspace = true, default-features = false, features = ["trace"] }
anyhow = { workspace = true, default-features = false, features = ["std"] }
serde = { workspace = true,features = ["derive"] }
url = { workspace = true, default-features = false }
migration = { path = "../lib/migration" }
session = { path = "../lib/session" }
entity = { path = "../lib/entity" }
bb8-redis = { workspace = true }
